packages/svelte/tests/compiler-errors/samples/script-unclosed/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unclosed_element',
		message: '`<script>` was left open',
		position: [32, 32]
	}
});
